--- a/global.css
+++ b/global.css
@@ -1,106 +1,201 @@
 body {
-    margin: 0;
-    line-height: normal;
-  }
-  
-  :root {
-    /* fonts */
-    --font-kumbh-sans: "Kumbh Sans";
-    --heading-h6: Roboto;
-    --text-small: Inter;
-    --font-poppins: Poppins;
-  
-    /* font sizes */
-    --text-small-size: 14px;
-    --text-body-2-size: 16px;
-    --heading-h6-size: 18px;
-    --heading-h2-size: 56px;
-    --font-size-26xl: 45px;
-    --font-size-15xl: 34px;
-    --heading-h5-size: 20px;
-    --heading-h3-size: 40px;
-    --font-size-13xl: 32px;
-    --font-size-5xl: 24px;
-    --heading-h1-size: 72px;
-  
-    /* Colors */
-    --greys-20: #f7f7f7;
-    --white: #fff;
-    --text-white: #fefefe;
-    --text-black: #1b1b1b;
-    --greys-black: #191919;
-    --dark: #09142f;
-    --color-gray-100: rgba(36, 36, 36, 0.65);
-    --color-gray-200: rgba(27, 27, 27, 0.75);
-    --black-500: #686868;
-    --grey-3: #5c5c5c;
-    --black-600: #4d4d4d;
-    --primary-300: #3d0ca6;
-    --primary-main: #360b92;
-    --primary-100: #eee7fd;
-    --grey-1: #e5e7eb;
-    --greys-400: #364149;
-    --black-700: #333;
-    --greys-300: #6c8193;
-    --text-grey: #bfbfbf;
-    --color-mediumslateblue: #693dc4;
-    --color-navajowhite: #fadda8;
-    --primary-200: #ab88f6;
-    --primary-400: #1a0547;
-  
-    /* Gaps */
-    --gap-10xs: 3px;
-    --gap-113xl: 132px;
-    --gap-5xs: 8px;
-    --gap-xl: 20px;
-    --gap-39xl: 58px;
-    --gap-69xl: 88px;
-    --gap-25xl: 44px;
-    --gap-6xs: 7px;
-    --gap-3xs: 10px;
-    --gap-5xl: 24px;
-    --gap-mini: 15px;
-    --gap-11xs: 2px;
-    --gap-6xl: 25px;
-    --gap-8xl: 27px;
-    --gap-16xl: 35px;
-    --gap-34xl: 53px;
-    --gap-51xl: 70px;
-    --gap-14xl: 33px;
-    --gap-24xl: 43px;
-    --gap-19xl: 38px;
-    --gap-314xl: 333px;
-  
-    /* Paddings */
-    --padding-xl: 20px;
-    --padding-101xl: 120px;
-    --padding-4xl: 23px;
-    --padding-59xl: 78px;
-    --padding-4xs: 9px;
-    --padding-6xs: 7px;
-    --padding-12xs: 1px;
-    --padding-32xl: 51px;
-    --padding-25xl: 44px;
-    --padding-10xl: 29px;
-    --padding-9xl: 28px;
-    --padding-21xl: 40px;
-    --padding-9xs: 4px;
-    --padding-13xl: 32px;
-    --padding-5xl: 24px;
-    --padding-lgi: 19px;
-    --padding-mini: 15px;
-    --padding-11xs: 2px;
-    --padding-17xl: 36px;
-    --padding-5xs: 8px;
-    --padding-sm: 14px;
-    --padding-base: 16px;
-    --padding-3xs: 10px;
-    --padding-smi: 13px;
-  
-    /* Border radiuses */
-    --br-9xs: 4px;
-    --br-24xl: 43px;
-    --br-5xs: 8px;
-    --br-29xl: 48px;
-  }
-  
+  margin: 0;
+  line-height: normal;
+}
+
+:root {
+  /* fonts */
+  --font-kumbh-sans: "Kumbh Sans";
+  --heading-h6: Roboto;
+  --text-small: Inter;
+  --font-poppins: Poppins;
+  --h6-body-regular: Rubik;
+
+  /* font sizes */
+  --text-small-size: 14px;
+  --text-body-2-size: 16px;
+  --heading-h6-size: 18px;
+  --heading-h2-size: 56px;
+  --font-size-26xl: 45px;
+  --font-size-15xl: 34px;
+  --heading-h5-size: 20px;
+  --heading-h3-size: 40px;
+  --font-size-13xl: 32px;
+  --h4-regular-size: 24px;
+  --heading-h1-size: 72px;
+  --info-regular-size: 12px;
+  --heading-h4-size: 26px;
+  --font-size-2xl: 21px;
+
+  /* Colors */
+  --greys-20: #f7f7f7;
+  --color-whitesmoke-100: #f5f6f7;
+  --color-whitesmoke-200: #f5f5f5;
+  --greys-100: #f0f2f4;
+  --color-whitesmoke-300: rgba(247, 247, 247, 0.5);
+  --white: #fff;
+  --text-white: #fefefe;
+  --bg-body: #fafafa;
+  --text-black: #1b1b1b;
+  --black-800: #1a1a1a;
+  --greys-black: #191919;
+  --dark: #09142f;
+  --color-gray-100: #130f26;
+  --color-gray-200: rgba(0, 0, 0, 0.25);
+  --color-gray-300: rgba(36, 36, 36, 0.65);
+  --color-gray-400: rgba(27, 27, 27, 0.75);
+  --color-gray-500: rgba(9, 20, 47, 0.06);
+  --black-500: #686868;
+  --neutral-600: #666;
+  --text-grey1: #5e5e5e;
+  --grey-3: #5c5c5c;
+  --color-dimgray-100: #545454;
+  --black-600: #4d4d4d;
+  --primary-300: #3d0ca6;
+  --primary-main: #360b92;
+  --primary-100: #eee7fd;
+  --color-lavender-100: #d4cfe3;
+  --grey-1: #e5e7eb;
+  --color-gainsboro-100: #e6e6e6;
+  --color-gainsboro-200: #dedede;
+  --color-gainsboro-300: #dadada;
+  --color-gainsboro-400: #d9d9d9;
+  --greys-400: #364149;
+  --black-700: #333;
+  --greys-300: #6c8193;
+  --primary-200: #ab88f6;
+  --color-ghostwhite: #fafafe;
+  --color-silver-100: #c9c9c9;
+  --text-grey: #bfbfbf;
+  --color-mediumslateblue: #693dc4;
+  --color-navajowhite: #fadda8;
+  --primary-400: #1a0547;
+  --color-midnightblue-100: rgba(26, 3, 76, 0.39);
+  --color-goldenrod: #f8b32e;
+  --color-darkgray: #979797;
+  --color-deepskyblue: #45a9ea;
+  --border-grey: #cfcfcf;
+  --greys-200: #c4ccd4;
+  --black: #000;
+  --color-slateblue: #7857c2;
+
+  /* Gaps */
+  --gap-10xs: 3px;
+  --gap-0: 0px;
+  --gap-113xl: 132px;
+  --gap-14xl: 33px;
+  --gap-base: 16px;
+  --gap-5xs: 8px;
+  --gap-xl: 20px;
+  --gap-21xl: 40px;
+  --gap-sm: 14px;
+  --gap-39xl: 58px;
+  --gap-69xl: 88px;
+  --gap-3xl: 22px;
+  --gap-25xl: 44px;
+  --gap-11xl: 30px;
+  --gap-2xl: 21px;
+  --gap-6xs: 7px;
+  --gap-3xs: 10px;
+  --gap-5xl: 24px;
+  --gap-mini: 15px;
+  --gap-11xs: 2px;
+  --gap-6xl: 25px;
+  --gap-8xl: 27px;
+  --gap-16xl: 35px;
+  --gap-mid: 17px;
+  --gap-34xl: 53px;
+  --gap-7xl: 26px;
+  --gap-4xs: 9px;
+  --gap-51xl: 70px;
+  --gap-7xs: 6px;
+  --gap-24xl: 43px;
+  --gap-19xl: 38px;
+  --gap-lgi: 19px;
+  --gap-lg: 18px;
+  --gap-314xl: 333px;
+  --gap-23xl: 42px;
+  --gap-8xs: 5px;
+  --gap-107xl: 126px;
+  --gap-30xl: 49px;
+  --gap-xs: 12px;
+  --gap-132xl: 151px;
+  --gap-15xl: 34px;
+  --gap-9xl: 28px;
+  --gap-18xl: 37px;
+  --gap-13xl: 32px;
+  --gap-9xs: 4px;
+  --gap-79xl: 98px;
+  --gap-smi: 13px;
+  --gap-12xl: 31px;
+  --gap-135xl: 154px;
+  --gap-20xl: 39px;
+
+  /* Paddings */
+  --padding-xl: 20px;
+  --padding-101xl: 120px;
+  --padding-4xl: 23px;
+  --padding-132xl: 151px;
+  --padding-59xl: 78px;
+  --padding-4xs: 9px;
+  --padding-6xs: 7px;
+  --padding-12xs: 1px;
+  --padding-10xs: 3px;
+  --padding-85xl: 104px;
+  --padding-2xl: 21px;
+  --padding-32xl: 51px;
+  --padding-25xl: 44px;
+  --padding-10xl: 29px;
+  --padding-9xl: 28px;
+  --padding-21xl: 40px;
+  --padding-22xl: 41px;
+  --padding-9xs: 4px;
+  --padding-xs: 12px;
+  --padding-13xl: 32px;
+  --padding-2xs: 11px;
+  --padding-5xl: 24px;
+  --padding-lgi: 19px;
+  --padding-18xl: 37px;
+  --padding-mini: 15px;
+  --padding-11xs: 2px;
+  --padding-17xl: 36px;
+  --padding-5xs: 8px;
+  --padding-sm: 14px;
+  --padding-base: 16px;
+  --padding-237xl: 256px;
+  --padding-3xs: 10px;
+  --padding-62xl: 81px;
+  --padding-86xl: 105px;
+  --padding-7xl: 26px;
+  --padding-smi: 13px;
+  --padding-15xl: 34px;
+  --padding-16xl: 35px;
+  --padding-27xl: 46px;
+  --padding-105xl: 124px;
+  --padding-220xl: 239px;
+  --padding-26xl: 45px;
+  --padding-31xl: 50px;
+  --padding-3xl: 22px;
+  --padding-106xl: 125px;
+  --padding-28xl: 47px;
+  --padding-37xl: 56px;
+  --padding-44xl: 63px;
+  --padding-51xl: 70px;
+  --padding-12xl: 31px;
+  --padding-159xl: 178px;
+  --padding-14xl: 33px;
+  --padding-53xl: 72px;
+  --padding-29xl: 48px;
+
+  /* Border radiuses */
+  --br-9xs: 4px;
+  --br-24xl: 43px;
+  --br-5xs: 8px;
+  --br-29xl: 48px;
+  --br-3xs: 10px;
+  --br-7xs: 6px;
+  --br-11xs: 2px;
+  --br-base: 16px;
+  --br-10xs: 3px;
+}
+
