All files added

--- a/global.css
+++ b/global.css
@@ -9,6 +9,8 @@ body {
   --heading-h6: Roboto;
   --text-small: Inter;
   --font-poppins: Poppins;
+  --font-manrope: Manrope;
+  --typography-small: "Open Sans";
   --h6-body-regular: Rubik;
 
   /* font sizes */
@@ -24,73 +26,80 @@ body {
   --h4-regular-size: 24px;
   --heading-h1-size: 72px;
   --info-regular-size: 12px;
+  --font-size-lgi: 19px;
   --heading-h4-size: 26px;
+  --font-size-17xl: 36px;
+  --font-size-3xs: 10px;
+  --typography-small-size: 15px;
   --font-size-2xl: 21px;
 
   /* Colors */
+  --color-whitesmoke-100: #f9f9f9;
   --greys-20: #f7f7f7;
-  --color-whitesmoke-100: #f5f6f7;
-  --color-whitesmoke-200: #f5f5f5;
+  --color-whitesmoke-200: #f5f6f7;
+  --color-whitesmoke-300: #f5f5f5;
   --greys-100: #f0f2f4;
-  --color-whitesmoke-300: rgba(247, 247, 247, 0.5);
   --white: #fff;
   --text-white: #fefefe;
   --bg-body: #fafafa;
+  --dmv-black: #23262f;
   --text-black: #1b1b1b;
   --black-800: #1a1a1a;
   --greys-black: #191919;
   --dark: #09142f;
-  --color-gray-100: #130f26;
-  --color-gray-200: rgba(0, 0, 0, 0.25);
+  --color-gray-100: #0d0d0d;
+  --color-gray-200: #071209;
+  --color-gray-500: rgba(255, 255, 255, 0.42);
   --color-gray-300: rgba(36, 36, 36, 0.65);
   --color-gray-400: rgba(27, 27, 27, 0.75);
-  --color-gray-500: rgba(9, 20, 47, 0.06);
   --black-500: #686868;
   --neutral-600: #666;
   --text-grey1: #5e5e5e;
   --grey-3: #5c5c5c;
-  --color-dimgray-100: #545454;
   --black-600: #4d4d4d;
   --primary-300: #3d0ca6;
   --primary-main: #360b92;
+  --color-lavender-200: #eeeeff;
   --primary-100: #eee7fd;
   --color-lavender-100: #d4cfe3;
+  --color-gainsboro-200: #e7e7e7;
   --grey-1: #e5e7eb;
-  --color-gainsboro-100: #e6e6e6;
-  --color-gainsboro-200: #dedede;
-  --color-gainsboro-300: #dadada;
-  --color-gainsboro-400: #d9d9d9;
+  --white-shade-1: #e6e6e6;
+  --color-gainsboro-300: #e2e2e2;
+  --color-gainsboro-100: #d9d9d9;
   --greys-400: #364149;
   --black-700: #333;
+  --color-slategray-100: #708099;
   --greys-300: #6c8193;
-  --primary-200: #ab88f6;
-  --color-ghostwhite: #fafafe;
-  --color-silver-100: #c9c9c9;
+  --color-slategray-200: #787486;
+  --color-slategray-300: #6b7280;
   --text-grey: #bfbfbf;
-  --color-mediumslateblue: #693dc4;
+  --color-mediumslateblue-100: #6956e5;
+  --color-mediumslateblue-200: #693dc4;
   --color-navajowhite: #fadda8;
+  --primary-200: #ab88f6;
   --primary-400: #1a0547;
-  --color-midnightblue-100: rgba(26, 3, 76, 0.39);
-  --color-goldenrod: #f8b32e;
+  --color-darkgray-100: #afafaf;
+  --grey-11: #999;
   --color-darkgray: #979797;
-  --color-deepskyblue: #45a9ea;
+  --color-goldenrod: #f8b32e;
+  --primary-color: #45a9ea;
+  --color-salmon-100: #fb896b;
+  --color-orange: #f2a10d;
   --border-grey: #cfcfcf;
   --greys-200: #c4ccd4;
   --black: #000;
-  --color-slateblue: #7857c2;
+  --red: #dc3545;
 
   /* Gaps */
   --gap-10xs: 3px;
-  --gap-0: 0px;
-  --gap-113xl: 132px;
   --gap-14xl: 33px;
   --gap-base: 16px;
   --gap-5xs: 8px;
   --gap-xl: 20px;
   --gap-21xl: 40px;
   --gap-sm: 14px;
-  --gap-39xl: 58px;
-  --gap-69xl: 88px;
+  --gap-10xl: 29px;
   --gap-3xl: 22px;
   --gap-25xl: 44px;
   --gap-11xl: 30px;
@@ -104,43 +113,33 @@ body {
   --gap-8xl: 27px;
   --gap-16xl: 35px;
   --gap-mid: 17px;
-  --gap-34xl: 53px;
   --gap-7xl: 26px;
   --gap-4xs: 9px;
-  --gap-51xl: 70px;
-  --gap-7xs: 6px;
-  --gap-24xl: 43px;
   --gap-19xl: 38px;
   --gap-lgi: 19px;
   --gap-lg: 18px;
-  --gap-314xl: 333px;
+  --gap-64xl: 83px;
   --gap-23xl: 42px;
-  --gap-8xs: 5px;
-  --gap-107xl: 126px;
-  --gap-30xl: 49px;
-  --gap-xs: 12px;
-  --gap-132xl: 151px;
-  --gap-15xl: 34px;
-  --gap-9xl: 28px;
-  --gap-18xl: 37px;
-  --gap-13xl: 32px;
+  --gap-4xl: 23px;
   --gap-9xs: 4px;
-  --gap-79xl: 98px;
+  --gap-41xl: 60px;
+  --gap-22xl: 41px;
+  --gap-17xl: 36px;
+  --gap-xs: 12px;
+  --gap-8xs: 5px;
+  --gap-31xl: 50px;
+  --gap-18xl: 37px;
   --gap-smi: 13px;
   --gap-12xl: 31px;
-  --gap-135xl: 154px;
-  --gap-20xl: 39px;
 
   /* Paddings */
   --padding-xl: 20px;
   --padding-101xl: 120px;
   --padding-4xl: 23px;
-  --padding-132xl: 151px;
   --padding-59xl: 78px;
   --padding-4xs: 9px;
   --padding-6xs: 7px;
   --padding-12xs: 1px;
-  --padding-10xs: 3px;
   --padding-85xl: 104px;
   --padding-2xl: 21px;
   --padding-32xl: 51px;
@@ -162,40 +161,50 @@ body {
   --padding-5xs: 8px;
   --padding-sm: 14px;
   --padding-base: 16px;
-  --padding-237xl: 256px;
   --padding-3xs: 10px;
   --padding-62xl: 81px;
-  --padding-86xl: 105px;
   --padding-7xl: 26px;
+  --padding-33xl: 52px;
   --padding-smi: 13px;
   --padding-15xl: 34px;
   --padding-16xl: 35px;
   --padding-27xl: 46px;
+  --padding-6xl: 25px;
+  --padding-7xs: 6px;
+  --padding-8xs: 5px;
+  --padding-8xl: 27px;
+  --padding-19xl: 38px;
+  --padding-14xl: 33px;
+  --padding-43xl: 62px;
+  --padding-12xl: 31px;
+  --padding-20xl: 39px;
+  --padding-46xl: 65px;
+  --padding-56xl: 75px;
+  --padding-77xl: 96px;
+  --padding-159xl: 178px;
+  --padding-130xl: 149px;
+  --padding-174xl: 193px;
+  --padding-55xl: 74px;
+  --padding-44xl: 63px;
+  --padding-mid: 17px;
+  --padding-lg: 18px;
+  --padding-23xl: 42px;
+  --padding-36xl: 55px;
   --padding-105xl: 124px;
-  --padding-220xl: 239px;
-  --padding-26xl: 45px;
   --padding-31xl: 50px;
   --padding-3xl: 22px;
-  --padding-106xl: 125px;
   --padding-28xl: 47px;
-  --padding-37xl: 56px;
-  --padding-44xl: 63px;
-  --padding-51xl: 70px;
-  --padding-12xl: 31px;
-  --padding-159xl: 178px;
-  --padding-14xl: 33px;
-  --padding-53xl: 72px;
-  --padding-29xl: 48px;
 
   /* Border radiuses */
   --br-9xs: 4px;
   --br-24xl: 43px;
   --br-5xs: 8px;
   --br-29xl: 48px;
-  --br-3xs: 10px;
   --br-7xs: 6px;
-  --br-11xs: 2px;
-  --br-base: 16px;
+  --br-2xl: 21px;
   --br-10xs: 3px;
+  --br-xl: 20px;
+  --br-3xs: 10px;
+  --br-6xs: 7px;
+  --br-11xs: 2px;
 }
-
