--- a/payment-page-2.css
+++ b/payment-page-2.css
@@ -1,4 +1,4 @@
-.mask-group-1-14 {
+.mask-group-1-19 {
   width: 60px;
   height: 24px;
   position: relative;
@@ -12,7 +12,7 @@
   justify-content: flex-start;
   max-width: 100%;
 }
-.rent2 {
+.rent3 {
   height: 19px;
   width: 35px;
   position: relative;
@@ -120,7 +120,7 @@
   align-self: stretch;
   height: 698px;
   position: relative;
-  background-color: var(--color-gainsboro-200);
+  background-color: var(--color-gainsboro-100);
 }
 .framelogoutsignup {
   align-self: stretch;
@@ -175,7 +175,7 @@
   line-height: 120%;
   display: inline-block;
 }
-.b6 {
+.b12 {
   height: 26px;
   width: 13px;
   position: relative;
@@ -212,7 +212,7 @@
   line-height: 120%;
   display: inline-block;
 }
-.b7 {
+.b13 {
   height: 26px;
   width: 12px;
   position: relative;
@@ -226,7 +226,7 @@
   line-height: 120%;
   display: inline-block;
 }
-.b9 {
+.b15 {
   height: 26px;
   width: 66px;
   position: relative;
@@ -418,7 +418,7 @@
   overflow: hidden;
   flex-shrink: 0;
 }
-.div {
+.div8 {
   height: 16px;
   width: 36px;
   position: relative;
@@ -426,7 +426,7 @@
   align-items: center;
   flex-shrink: 0;
 }
-.div1 {
+.div9 {
   height: 16px;
   width: 8px;
   position: relative;
@@ -592,7 +592,7 @@
   gap: var(--gap-9xs);
   min-width: 156px;
 }
-.div7 {
+.div15 {
   align-self: stretch;
   width: 18px;
   position: relative;
@@ -630,7 +630,7 @@
   font-size: var(--h4-regular-size);
   display: inline-block;
 }
-.div8 {
+.div16 {
   height: 16px;
   width: 22px;
   position: relative;
@@ -714,7 +714,7 @@
   color: var(--text-grey1);
   display: inline-block;
 }
-.div9 {
+.div17 {
   height: 16px;
   width: 29px;
   position: relative;
@@ -772,7 +772,7 @@
 .check2 {
   height: 25px;
   width: 25px;
-  border-radius: 3px;
+  border-radius: var(--br-10xs);
   background-color: var(--bg-body);
   border: 1px solid rgba(0, 0, 0, 0.25);
   box-sizing: border-box;
@@ -809,7 +809,8 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: var(--padding-5xl) 33px var(--padding-5xl) var(--padding-12xl);
+  padding: var(--padding-5xl) var(--padding-14xl) var(--padding-5xl)
+    var(--padding-12xl);
   position: relative;
   gap: var(--gap-5xl);
   min-height: 522px;
@@ -891,7 +892,7 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-start;
-  padding: var(--padding-17xl) var(--padding-13xl) 178px;
+  padding: var(--padding-17xl) var(--padding-13xl) var(--padding-159xl);
   gap: 34px;
   max-width: 100%;
 }
@@ -952,7 +953,7 @@
     flex-wrap: wrap;
   }
 
-  .div1 {
+  .div9 {
     width: 100%;
     height: 8px;
   }
@@ -962,7 +963,7 @@
   }
 
   .cvv-input {
-    font-size: 19px;
+    font-size: var(--font-size-lgi);
   }
 
   .newcreditcard {
@@ -1023,7 +1024,7 @@
   .payment-input-frame-parent {
     gap: var(--gap-mid);
     padding-top: var(--padding-xl);
-    padding-bottom: 75px;
+    padding-bottom: var(--padding-56xl);
     box-sizing: border-box;
   }
 
